--- a/paper/wrangleData.qmd
+++ b/paper/wrangleData.qmd
@@ -67,11 +67,14 @@ editor_options:
 editor:
   render-on-save: true
 title: |
-  | A Tao of Data Wrangling:
+  | A TAO of Data Wrangling:
   | A Practical Routine for Getting
   | Past the 'Janitor Work'
 subtitle: "Preliminary version. Do not circulate without permission."
-abstract: "This article focuses on a preliminary step in any ex-post data harmonization project---wrangling the pre-harmonized data---and suggests best practices for helping scholars avoid errors in this often-tedious work. To provide illustrations of these best practices, the article uses the examples of pre-harmonizing procedures used to produce the Standardized World Income Inequality Database (SWIID), a widely used database that uses Gini indices from multiple sources to create comparable estimates, and the Dynamic Comparative Public Opinion (DCPO) project, which creates a workflow for harmonizing aggregate public opinion data."
+abstract: |
+    This article focuses on a preliminary step in any ex-post data harmonization project---wrangling the pre-harmonized data---and suggests a practical routine for helping researchers reduce human errors in this often-tedious work. 
+    The routine includes three steps: (1) **T**eam-based concept construct and data selection; (2) Data entry **a**utomation; and (3) "Second-order" **o**pening---a "Tao" of data wrangling. 
+    We illustrate the routine with the examples of pre-harmonizing procedures used to produce the Standardized World Income Inequality Database (SWIID), a widely used database that uses Gini indices from multiple sources to create comparable estimates, and the Dynamic Comparative Public Opinion (DCPO) project, which creates a workflow for harmonizing aggregate public opinion data.
 keywords: 
   - Data generation process
   - Machine assistance
@@ -291,7 +294,7 @@ The routine includes three steps: data selection, data entry, and opening.
 We illustrate how researchers use this routine on statistical (*hard*) and opinion (*soft*) data with two ongoing harmonization efforts, the Standardized World Income Inequality Database (SWIID) and the Dynamic Comparative Public Opinion (DCPO) project.
 
 
-# A 3-Step Routine for Data Harmonization
+# A 3-Step "Tao" for Data Harmonization
 
 Our routine aims to helping researchers reach three goals for scientific research: 
 
@@ -302,9 +305,9 @@ and
 
 The routine decomposes a data-wrangling process into three steps: 
 
-1. Team-based concept construct and data selection;
-1. Data entry automation; and 
-1. "Second-order" opening.
+1. **T**eam-based concept construct and data selection;
+1. Data entry **a**utomation; and 
+1. "Second-order" **o**pening.
 
 To illustrate the above routine, we use two data harmonization projects as examples, SWIID and DCPO.
 SWIID is a long-running project that seeks to provide harmonized income inequality statistics for the broadest possible coverage of countries and years [@Solt2009; @Solt2015; @Solt2016; @Solt2020].
